Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9
-
None
-
cf67bb976e082105994ff00a2616129833edb857
Description
I noticed this in my auto test: https://github.com/mitchcurtis/slate/blob/master/tests/tst_app.cpp#L1281
The code worked with Qt 5.8, and fails in 5.9.
import QtQuick 2.7 import QtQuick.Controls 2.0 ApplicationWindow { id: window width: 400 height: 400 color: "#ffffff" visible: true MouseArea { id: mouseArea anchors.fill: parent hoverEnabled: true acceptedButtons: Qt.LeftButton | Qt.RightButton onPressed: print("pressed") onReleased: { print("released") if (mouse.button === Qt.RightButton && !contextMenu.visible) { contextMenu.open(); } } Menu { id: contextMenu objectName: "tilesetContextMenu" parent: window.contentItem modal: true dim: false MenuItem { id: duplicateMenuItem objectName: "duplicateTileMenuButton" text: qsTr("Duplicate") } MenuItem { objectName: "rotateTileLeftMenuButton" text: qsTr("Rotate 90° Left") } MenuItem { objectName: "rotateTileRightMenuButton" text: qsTr("Rotate 90° Right") } } } }
Attachments
Issue Links
- relates to
-
QTBUG-109056 [Menu] dim property affects mouse events propagations, but it shouldn't
-
- Reported
-
For Gerrit Dashboard: QTBUG-60405 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
192770,3 | Popups: fix non-dimming modal background leaking events through | 5.9 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |